--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <body>
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
-         <nav class="nav flex container ">
+         <nav class="nav flex container">
             <a href="#" class="nav__logo">WATCHES</a>
             <div class="nav__menu show-menu" id="nav-menu">
                 <ul class="nav__list flex">
@@ -136,7 +136,7 @@
       </main>
 
       <!--=============== GSAP ===============-->
-      <script src=""></script>
+      <script src="assets/js/gsap.min.js"></script>
 
       <!--=============== SWIPER JS ===============-->
       <script src="assets/js/swiper-bundle.min.js"></script>
